--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div>
             <a class="logo d-none d-md-block" href="#">
-                Fast Functional Analysis
+                Fast Fundamental Analysis
             </a>
             <a class="logo d-block d-md-none" href="#">
                 FastFA
@@ -375,7 +375,7 @@
             </div>
 
             <div class="col-sm-6 text-right f-2">
-                <a href="https://github.com/gianfrancolombardo/fast-functional-analysis" target="_blank"
+                <a href="https://github.com/gianfrancolombardo/fast-fundamental-analysis" target="_blank"
                     class="text-reset"><i class="uil uil-github"></i></a>
             </div>
         </div>
